Project3/Parse/MiniJavaParser.jj
/* Copyright (C) 2007, 2013, Marquette University.  All rights reserved. */
/* 2013 Jan 30 : Includes Xinu.* external calls and Concurrency syntax.  */

PARSER_BEGIN(MiniJavaParser)
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser {}
PARSER_END(MiniJavaParser)

TOKEN_MGR_DECLS :
{
    static boolean anyErrors = false;
    static void error(String msg)
	{
        	anyErrors = true;
        	System.err.println(msg + ": line " + input_stream.getEndLine()
                           + ", column " + input_stream.getEndColumn());
    	}
}

/****************/
/* White space. */
/****************/
SKIP :
{
	  " " | "\t" | "\n" | "\r" | "\f"
}

/*************************/
/* Lexical Specification */
/*************************/

TOKEN :
{

	/* Reserved words. */
	  < "class" >
	| < "public" >
	| < "static" >

	/* Types. */
	| < "void" >

	/* Operators. */
	| < "." >

	/* Grouping tokens. */
	| < "{" >
	| < "}" >
	| < "(" >
	| < ")" >
	| < "[" >
	| < "]" >
	| < ";" >
	| < "," >

	/* Reserved words that aren't really reserved in Java. */
	| < "main" >
	| < "String" > 
	| < "Thread" > 
	| < "Xinu" >
	| < IF: "if" >
    | < ELSE: "else" >
    | < WHILE: "while" >
    | < TRUE: "true" >
    | < FALSE: "false" >
    | < THIS: "this" >
    | < NEW: "new" >
    | < LENGTH: "length" >
    | < INT_TYPE: "int" >
	/*Operators */
	| < BANG: "!" >
    | < STAR: "*" >
    | < PLUS: "+" >
    | < MINUS: "-" >
    | < LESS: "<" >
    | < ASSIGN: "=" >


}


/************/
/* Literals */
/************/

TOKEN :
{
	  < INT: ( "0" | ["1"-"9"] (["0"-"9"])* ) >
	| < STRING: "\"" (~["\""])*  "\"" >
}


/***************/
/* Identifiers */
/***************/
TOKEN :
{
	  < ID: <LETTER> (<LETTER>|<DIGIT>|<UNDER>)* >
	| < #LETTER: ["A"-"Z","a"-"z"] >
	| < #DIGIT: ["0"-"9"] >
	| < #UNDER: "_" >
}

<DEFAULT>
SKIP :
{
  <~[]> { error("Illegal token"); }
}

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
Absyn.Program Goal() :
{
	LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
}
{
	MainClassDeclaration(cl) <EOF>
	{ return new Absyn.Program(cl); }
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) :
{
	Absyn.ClassDecl  cd;
	Absyn.Stmt stmt;
	Absyn.VarDecl var;
	Token name, arg;
	LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
	LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
	LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
	LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
}
{
  "class" name = <ID> "{" "public" "static" "void" "main"
	"(" "String" "[" "]" arg = <ID> ")"
	{ formals.add(new Absyn.Formal(
			new Absyn.ArrayType(	
				new Absyn.IdentifierType("String")),
					arg.toString())); }
	"{" (LOOKAHEAD(VarDeclaration()) var = VarDeclaration()
		{ locals.add(var); } )*
	(stmt = Statement() { stmts.add(stmt); } )*
	"}" "}"

	{
		methods.add(new Absyn.MethodDecl(null, false, "main", formals,
				locals, stmts, new Absyn.IntegerLiteral(0)));
		cd = new Absyn.ClassDecl(name.toString(),
						null,
						new LinkedList<Absyn.VarDecl>(), methods);
		cl.add(cd);
		return cd;
	}
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
Absyn.VarDecl VarDeclaration() :
{
	Absyn.Type type = null;
	Token      name = null;
	Absyn.Expr init = null;
}
{
	type = Type() name = <ID> [ "=" init = Expression() ] ";"
	{ return new Absyn.VarDecl(type, name.toString(), init); }
}

Absyn.Type Type() :
{
	Absyn.Type type;
}
{
	type = BaseType()
	( "[" "]" { type = new Absyn.ArrayType(type); } )*
	{ return type; }
}

Absyn.Type BaseType() :
{
	Token name;
}
{
	name = <ID>	{ return new Absyn.IdentifierType(name.toString()); }
}

Absyn.Stmt Statement() :
{
	Absyn.Stmt stmt;
}
{
	(stmt = Block() | stmt = IfStmt() | stmt = WhileStmt() | stmt = AssignStmt() | stmt = XinuCallStatement()) 
	{ return stmt; }
}
Absyn.Stmt Block() : {
	Absyn.Stmt st;
	LinkedList<Absyn.Stmt> sl = new LinkedList<Absyn.Stmt>();
}
{
	"{" (st = Statement() {sl.add(st); } )* "}"
	{ return new Absyn.Block(sl); }
}
Absyn.Stmt IfStmt(): {
	Absyn.Expr ex;
	Absyn.Stmt st1, st2 = null; 
}
{
	"if" "(" ex = Expression() ")" st1 = Statement()
	[ LOOKAHEAD(1) "else" st2 = Statement() ]
	{ return new Absyn.If(ex, st1, st2); }
}
Absyn.Stmt WhileStmt() : 
{
	Absyn.Expr ex;
	Absyn.Stmt st;
}
{
	"while" "(" ex = Expression() ")" st = Statement()
	{ return new Absyn.While(ex,st); }
}
Absyn.Stmt AssignStmt() : {
	Token id;
	Absyn.Expr ex1, ex2;
}
{
	id = <ID> 
	("=" ex1 = Expression() ";" 
	{ return new Absyn.Assign(new Absyn.Identifier(id.toString()), ex1); }
	| "[" ex1 = Expression() "]" "=" ex2 = Expression() ";" 
	{ return new Absyn.ArrayAssign(new Absyn.Identifier(id.toString()), ex1, ex2); } ) 
}

Absyn.XinuCallStmt XinuCallStatement() :
{
	Token method;
	Absyn.Expr arg;
	LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
}
{
	"Xinu" "." method = <ID> 
	"(" [ arg = Expression() { args.add(arg); }
		( "," arg = Expression()  { args.add(arg); } )* ]
	")" ";" { return new Absyn.XinuCallStmt(method.toString(), args); }
}

Absyn.Expr Expression() : 
{ Absyn.Expr ex; }
{
	ex = AndExpression() { return ex; }

}
Absyn.Expr AndExpression() : 
{ Absyn.Expr ex1, ex2; }
{
	ex1 = LessThanExpression()
	("&&" ex2 = LessThanExpression() { ex1 = new Absyn.AndExpression(ex1,ex2); } )*
	{return ex1; }
}
Absyn.Expr LessThanExpression() :{
	Absyn.Expr ex1,ex2;
}
{
	ex1 = AdditiveExpression()
	("<" ex2 = AdditiveExpression() { ex1 = new Absyn.LessThan(ex1,ex2); } )*
	{return ex1; }
}
Absyn.Expr AdditiveExpression() : {
	Absyn.Expr ex1,ex2;
	Token op;

}
{
	ex1 = MultiplilyExpression()
	( 
		(op = "+" | op = "-" ) ex2 = MultiplilyExpression()
		{
			if (op.image.equals("+")){
				ex1 = new Absyn.Plus(ex1,ex2);

			}else{ 
				ex1 = new Absyn.Minus(ex1,ex2);
			}
		} 
	)*
	{return ex1;}
}
Absyn.Expr MultiplilyExpression() :
{ Absyn.Expr ex1, ex2; }
{
	ex1 = PrefixExpression()
	("*" ex2 = PrefixExpression() { ex1 = new Absyn.Times(ex1,ex2); })*
	{return ex1; }
}
Absyn.Expr PrefixExpression() : 
{Absyn.Expr ex; }
{
	"!" ex = PrefixExpression()
	{
		return new Absyn.Not(ex);
	}
	| ex = PostfixExpression() {return ex; }

}
Absyn.Expr PostfixExpression() : 
{
	Absyn.Expr ex, index;
	Token id;
	LinkedList<Absyn.Expr> args;

}
{
	ex = PrimaryExpression()
	( "[" index = Expression() "]" { ex = new Absyn.ArrayLookup(ex,index); } | LOOKAHEAD(2) "." "length" { ex = new Absyn.ArrayLength(ex); }
	| "." id = <ID> "(" args = ExpressionList() ")" { ex = new Absyn.Call(ex, new Absyn.Identifier(id.image), args);})*
	{return ex; }
}
Absyn.Expr PrimaryExpression() : 
{ 
	Token t;
	Absyn.Expr ex;
}
{
	  t = <INT> { return new Absyn.IntegerLiteral(Integer.parseInt(t.image)); }
	| t = <STRING> { return new Absyn.StringLiteral(t.image); }
	| "true" { return new Absyn.True(); }
	| "false" { return new Absyn.False(); }
	| t = <ID> { return new Absyn.IdentifierExp(t.image); }
	| "this" { return new Absyn.This(); }
	| LOOKAHEAD(2) "new" "int" "[" ex = Expression() "]" { return new Absyn.NewArray(ex); }
	| "new" t = <ID> "(" ")" { return new Absyn.NewObject(new Absyn.Identifier(t.image)); }
	| "(" ex = Expression() ")" { return ex; }
}
LinkedList<Absyn.Expr> ExpressionList() : {
	LinkedList<Absyn.Expr> li = new LinkedList<Absyn.Expr>();
	Absyn.Expr ex;
}
{
	[ 
		ex = Expression() { li.add(ex); }
		( "," ex = Expression() { li.add(ex); } )*
	]
	{ return li; }
}
