Project3/Parse/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser implements MiniJavaParserConstants {

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
  static final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
    MainClassDeclaration(cl);
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  static final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
 Token name, arg;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    jj_consume_token(6);
    name = jj_consume_token(ID);
    jj_consume_token(11);
    jj_consume_token(7);
    jj_consume_token(8);
    jj_consume_token(9);
    jj_consume_token(19);
    jj_consume_token(13);
    jj_consume_token(20);
    jj_consume_token(15);
    jj_consume_token(16);
    arg = jj_consume_token(ID);
    jj_consume_token(14);
formals.add(new Absyn.Formal(
   new Absyn.ArrayType(
    new Absyn.IdentifierType("String")),
     arg.toString()));
    jj_consume_token(11);
    label_1:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_1;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 22:
      case IF:
      case WHILE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(12);
    jj_consume_token(12);
methods.add(new Absyn.MethodDecl(null, false, "main", formals,
    locals, stmts, new Absyn.IntegerLiteral(0)));
  cd = new Absyn.ClassDecl(name.toString(),
      null,
      new LinkedList<Absyn.VarDecl>(), methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  static final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
 Token      name = null;
 Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      init = Expression();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(17);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), init);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type Type() throws ParseException {Absyn.Type type;
    type = BaseType();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 15:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(15);
      jj_consume_token(16);
type = new Absyn.ArrayType(type);
    }
{if ("" != null) return type;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type BaseType() throws ParseException {Token name;
    name = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierType(name.toString());}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt stmt;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 11:{
      stmt = Block();
      break;
      }
    case IF:{
      stmt = IfStmt();
      break;
      }
    case WHILE:{
      stmt = WhileStmt();
      break;
      }
    case ID:{
      stmt = AssignStmt();
      break;
      }
    case 22:{
      stmt = XinuCallStatement();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return stmt;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Block() throws ParseException {Absyn.Stmt st;
 LinkedList<Absyn.Stmt> sl = new LinkedList<Absyn.Stmt>();
    jj_consume_token(11);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 22:
      case IF:
      case WHILE:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      st = Statement();
sl.add(st);
    }
    jj_consume_token(12);
{if ("" != null) return new Absyn.Block(sl);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt IfStmt() throws ParseException {Absyn.Expr ex;
 Absyn.Stmt st1, st2 = null;
    jj_consume_token(IF);
    jj_consume_token(13);
    ex = Expression();
    jj_consume_token(14);
    st1 = Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      st2 = Statement();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return new Absyn.If(ex, st1, st2);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt WhileStmt() throws ParseException {Absyn.Expr ex;
 Absyn.Stmt st;
    jj_consume_token(WHILE);
    jj_consume_token(13);
    ex = Expression();
    jj_consume_token(14);
    st = Statement();
{if ("" != null) return new Absyn.While(ex,st);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt AssignStmt() throws ParseException {Token id;
 Absyn.Expr ex1, ex2;
    id = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      ex1 = Expression();
      jj_consume_token(17);
{if ("" != null) return new Absyn.Assign(new Absyn.Identifier(id.toString()), ex1);}
      break;
      }
    case 15:{
      jj_consume_token(15);
      ex1 = Expression();
      jj_consume_token(16);
      jj_consume_token(ASSIGN);
      ex2 = Expression();
      jj_consume_token(17);
{if ("" != null) return new Absyn.ArrayAssign(new Absyn.Identifier(id.toString()), ex1, ex2);}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.XinuCallStmt XinuCallStatement() throws ParseException {Token method;
 Absyn.Expr arg;
 LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
    jj_consume_token(22);
    jj_consume_token(10);
    method = jj_consume_token(ID);
    jj_consume_token(13);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 13:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case BANG:
    case INT:
    case STRING:
    case ID:{
      arg = Expression();
args.add(arg);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 18:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
        jj_consume_token(18);
        arg = Expression();
args.add(arg);
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(14);
    jj_consume_token(17);
{if ("" != null) return new Absyn.XinuCallStmt(method.toString(), args);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Expression() throws ParseException {Absyn.Expr ex;
    ex = AndExpression();
{if ("" != null) return ex;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr AndExpression() throws ParseException {Absyn.Expr ex1, ex2;
    ex1 = LessThanExpression();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      jj_consume_token(45);
      ex2 = LessThanExpression();
ex1 = new Absyn.AndExpression(ex1,ex2);
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr LessThanExpression() throws ParseException {Absyn.Expr ex1,ex2;
    ex1 = AdditiveExpression();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LESS:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      jj_consume_token(LESS);
      ex2 = AdditiveExpression();
ex1 = new Absyn.LessThan(ex1,ex2);
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr AdditiveExpression() throws ParseException {Absyn.Expr ex1,ex2;
 Token op;
    ex1 = MultiplilyExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ex2 = MultiplilyExpression();
if (op.image.equals("+")){
    ex1 = new Absyn.Plus(ex1,ex2);

   }else{
    ex1 = new Absyn.Minus(ex1,ex2);
   }
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr MultiplilyExpression() throws ParseException {Absyn.Expr ex1, ex2;
    ex1 = PrefixExpression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_9;
      }
      jj_consume_token(STAR);
      ex2 = PrefixExpression();
ex1 = new Absyn.Times(ex1,ex2);
    }
{if ("" != null) return ex1;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr PrefixExpression() throws ParseException {Absyn.Expr ex;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BANG:{
      jj_consume_token(BANG);
      ex = PrefixExpression();
{if ("" != null) return new Absyn.Not(ex);}
      break;
      }
    case 13:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case INT:
    case STRING:
    case ID:{
      ex = PostfixExpression();
{if ("" != null) return ex;}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr PostfixExpression() throws ParseException {Absyn.Expr ex, index;
 Token id;
 LinkedList<Absyn.Expr> args;
    ex = PrimaryExpression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 10:
      case 15:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 15:{
        jj_consume_token(15);
        index = Expression();
        jj_consume_token(16);
ex = new Absyn.ArrayLookup(ex,index);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_2(2)) {
          jj_consume_token(10);
          jj_consume_token(LENGTH);
ex = new Absyn.ArrayLength(ex);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 10:{
            jj_consume_token(10);
            id = jj_consume_token(ID);
            jj_consume_token(13);
            args = ExpressionList();
            jj_consume_token(14);
ex = new Absyn.Call(ex, new Absyn.Identifier(id.image), args);
            break;
            }
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
{if ("" != null) return ex;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr PrimaryExpression() throws ParseException {Token t;
 Absyn.Expr ex;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      t = jj_consume_token(INT);
{if ("" != null) return new Absyn.IntegerLiteral(Integer.parseInt(t.image));}
      break;
      }
    case STRING:{
      t = jj_consume_token(STRING);
{if ("" != null) return new Absyn.StringLiteral(t.image);}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new Absyn.True();}
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new Absyn.False();}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierExp(t.image);}
      break;
      }
    case THIS:{
      jj_consume_token(THIS);
{if ("" != null) return new Absyn.This();}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_3(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INT_TYPE);
        jj_consume_token(15);
        ex = Expression();
        jj_consume_token(16);
{if ("" != null) return new Absyn.NewArray(ex);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:{
          jj_consume_token(NEW);
          t = jj_consume_token(ID);
          jj_consume_token(13);
          jj_consume_token(14);
{if ("" != null) return new Absyn.NewObject(new Absyn.Identifier(t.image));}
          break;
          }
        case 13:{
          jj_consume_token(13);
          ex = Expression();
          jj_consume_token(14);
{if ("" != null) return ex;}
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public LinkedList<Absyn.Expr> ExpressionList() throws ParseException {LinkedList<Absyn.Expr> li = new LinkedList<Absyn.Expr>();
 Absyn.Expr ex;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 13:
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case BANG:
    case INT:
    case STRING:
    case ID:{
      ex = Expression();
li.add(ex);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 18:{
          ;
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          break label_11;
        }
        jj_consume_token(18);
        ex = Expression();
li.add(ex);
      }
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
{if ("" != null) return li;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_3R_BaseType_187_2_15()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_AdditiveExpression_278_3_24()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(34)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) return true;
    }
    if (jj_3R_MultiplilyExpression_293_2_23()) return true;
    return false;
  }

  static private boolean jj_3R_AdditiveExpression_276_2_21()
 {
    if (jj_3R_MultiplilyExpression_293_2_23()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_AdditiveExpression_278_3_24()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_Type_178_4_16()
 {
    if (jj_scan_token(15)) return true;
    if (jj_scan_token(16)) return true;
    return false;
  }

  static private boolean jj_3R_Type_177_2_13()
 {
    if (jj_3R_BaseType_187_2_15()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_Type_178_4_16()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_LessThanExpression_267_3_22()
 {
    if (jj_scan_token(LESS)) return true;
    if (jj_3R_AdditiveExpression_276_2_21()) return true;
    return false;
  }

  static private boolean jj_3R_LessThanExpression_266_2_19()
 {
    if (jj_3R_AdditiveExpression_276_2_21()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_LessThanExpression_267_3_22()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_VarDeclaration_168_2_12()
 {
    if (jj_3R_Type_177_2_13()) return true;
    if (jj_scan_token(ID)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_VarDeclaration_168_30_14()) jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    return false;
  }

  static private boolean jj_3R_AndExpression_259_3_20()
 {
    if (jj_scan_token(45)) return true;
    if (jj_3R_LessThanExpression_266_2_19()) return true;
    return false;
  }

  static private boolean jj_3R_AndExpression_258_2_18()
 {
    if (jj_3R_LessThanExpression_266_2_19()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_AndExpression_259_3_20()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_VarDeclaration_168_2_12()) return true;
    return false;
  }

  static private boolean jj_3R_Expression_252_2_17()
 {
    if (jj_3R_AndExpression_258_2_18()) return true;
    return false;
  }

  static private boolean jj_3R_ExpressionList_343_5_44()
 {
    if (jj_scan_token(18)) return true;
    if (jj_3R_Expression_252_2_17()) return true;
    return false;
  }

  static private boolean jj_3R_ExpressionList_342_3_43()
 {
    if (jj_3R_Expression_252_2_17()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_ExpressionList_343_5_44()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_ExpressionList_341_2_42()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_ExpressionList_342_3_43()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_334_4_39()
 {
    if (jj_scan_token(13)) return true;
    if (jj_3R_Expression_252_2_17()) return true;
    if (jj_scan_token(14)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_333_4_38()
 {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(13)) return true;
    if (jj_scan_token(14)) return true;
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT_TYPE)) return true;
    if (jj_scan_token(15)) return true;
    if (jj_3R_Expression_252_2_17()) return true;
    if (jj_scan_token(16)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_331_4_37()
 {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_330_4_36()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_329_4_35()
 {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_328_4_34()
 {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_327_4_33()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_326_4_30()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_PrimaryExpression_326_4_32()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_327_4_33()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_328_4_34()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_329_4_35()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_330_4_36()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_331_4_37()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_333_4_38()) {
    jj_scanpos = xsp;
    if (jj_3R_PrimaryExpression_334_4_39()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_PrimaryExpression_326_4_32()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }
